fixed next bug (while on project view sticky nav had always bright color even when dark mode was on)

--- a/css/mutual.css
+++ b/css/mutual.css
@@ -8,6 +8,9 @@
 .dark .header {
   transition: all 0.5s ease;
 }
+.dark .sticky {
+  background-color: hsla(0, 0%, 9%, 0.87);
+}
 
 .dark .footer-link:hover {
   color: #bb86fc;
@@ -65,7 +68,7 @@
 
 .btn-light-dark-mode {
   position: absolute;
-  top: 10px;
+  top: 17px;
   border: none;
   background: none;
   cursor: pointer;
